# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../../companion_device_auth.gni")
import("../../../../../services/BUILD.gni")
import("../../../../fake/BUILD.gni")
import("../../../../test_config.gni")

config("companion_device_auth_service_unittest_common_config") {
  cflags = [
    "-DENABLE_TEST",
    "-DGTEST_HAS_CLONE=0",
  ]

  include_dirs = [
    "inc",
    "${companion_device_auth_path}/test/unittest/common/inc",
  ]
  include_dirs += companion_device_auth_fake_include_dirs
}

# Common sources shared by both inner and outer libraries
_companion_device_auth_service_unittest_common_sources =
    companion_device_auth_service_sources_for_test
_companion_device_auth_service_unittest_common_sources +=
    companion_device_auth_fake_sources
_companion_device_auth_service_unittest_common_sources +=
    [ "src/mock_guard.cpp" ]

# Common public configs shared by both libraries
_companion_device_auth_service_unittest_common_public_configs = [
  ":companion_device_auth_service_unittest_common_config",
  "${companion_device_auth_path}/services:service_config",
  "${companion_device_auth_path}/frameworks/native/ipc:companion_device_auth_native_ipc_config",
  "${companion_device_auth_path}/common:companion_device_auth_common_config",
]

# Common deps shared by both libraries
_companion_device_auth_service_unittest_common_deps =
    companion_device_auth_service_deps
_companion_device_auth_service_unittest_common_deps +=
    [ "${companion_device_auth_path}/common:companion_device_auth_common" ]

# Common external deps shared by both libraries
_companion_device_auth_service_unittest_common_external_deps =
    companion_device_auth_service_external_deps
_companion_device_auth_service_unittest_common_external_deps += [
  "googletest:gmock",
  "googletest:gtest",
]

# Inner library with CFI enabled, for internal services unittest
ohos_static_library("companion_device_auth_service_unittest_common_inner") {
  sanitize = companion_device_auth_default_sanitize
  branch_protector_ret = "pac_ret"
  testonly = true

  sources = _companion_device_auth_service_unittest_common_sources

  cflags = [ "-DSTATIC_LIBRARY" ]

  public_configs = _companion_device_auth_service_unittest_common_public_configs

  deps = _companion_device_auth_service_unittest_common_deps

  external_deps = _companion_device_auth_service_unittest_common_external_deps

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}

# Outer library without CFI, for external use (e.g. fuzz tests)
ohos_static_library("companion_device_auth_service_unittest_common") {
  sanitize = companion_device_auth_no_cfi_sanitize
  branch_protector_ret = "pac_ret"
  testonly = true

  sources = _companion_device_auth_service_unittest_common_sources

  cflags = [ "-DSTATIC_LIBRARY" ]

  public_configs = _companion_device_auth_service_unittest_common_public_configs

  deps = _companion_device_auth_service_unittest_common_deps

  external_deps = _companion_device_auth_service_unittest_common_external_deps

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
